--- a/TodoList/index.html
+++ b/TodoList/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>To Do List Faried</title>
     <link href="https://fonts.googleapis.com/css?family=Bellota:400,400i,700,700i&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/font-awesome.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="font-awesome.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
