--- a/TodoList/index.html
+++ b/TodoList/index.html
@@ -25,6 +25,6 @@
             </ul>
         </div>
     </div>
-    <script src="js/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
