--- a/TodoList/index.html
+++ b/TodoList/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>To Do List Faried</title>
     <link href="https://fonts.googleapis.com/css?family=Bellota:400,400i,700,700i&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="font-awesome.css">
+    <link rel="stylesheet" href="TodoList/font-awesome.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
